feat: Add video detection, model evaluation, and batch processing
This major update transforms the project from a static image tool into a comprehensive computer vision suite with powerful new capabilities for video analysis and model validation.

Key Features & Enhancements:

- **Unleash Real-Time Detection:** A new `videodetection.py` script brings your models to life, enabling object detection on both pre-recorded video files and live webcam streams.

- **Automated Video Workflows:** The video script includes an intelligent "batch mode." When saving a video, it automatically processes the entire file with a progress bar, saving you from having to manually watch and stop it. Output files are automatically given unique, timestamped names.

- **Measure What Matters:** Introducing the `evaluate` command in `imagedetection.py`. You can now scientifically measure your model's performance (mAP, Precision, Recall) on a validation dataset, providing a clear path to model improvement.

- **Enhanced Usability:** The `evaluate` command now accepts a `latest` keyword, which automatically finds and uses the most recently trained model. This removes the need to manually find and copy long file paths.

- **Robust and Tested:** Full unit test suites have been added for all new features, including video processing, batch mode, and model evaluation, ensuring the project remains stable and reliable as it scales.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,11 @@
-# Python
+# Python virtual environment
+venv/
+
+# Python cache
 __pycache__/
 *.pyc
 
-# Virtual Environment
-venv/
-.env
-
-# Ultralytics / Machine Learning
-runs/
-datasets/
-*.pt
-*.pth
-*.weights
-*.h5
-
-# OS generated files
-.DS_Store
-
-# Editor-specific files
-.vscode/
-.ipynb_checkpoints/
+# Media files - should not be committed to the repository
+*.mp4
+*.mov
+*.avi
